third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrowed_before_last_usage.exp

Diagnostics:
error: cannot move local `x` which is still borrowed
  ┌─ tests/reference-safety/v1-tests/borrowed_before_last_usage.move:5:9
  │
4 │     let r = &x;
  │             -- previous local borrow
5 │     let y = x;
  │         ^ moved here
